examples/test/testpolicy18744.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18744
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key4: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value32
          key19: value2
          key8: value21
      podSelector:
        matchLabels:
          key26: value32
          key48: value12
